fixed overflow in mainlayout

--- a/fastbreak/src/components/main/MainLayout.css
+++ b/fastbreak/src/components/main/MainLayout.css
@@ -12,5 +12,6 @@
     .main-content {
         flex: 1;
         background-color: var(--background-colour);
-        height:100%;
+        height:90vh;
+        overflow-y: auto;
     }
